<resources>
    <string name="app_name">Bristech</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_log_out">Log Out</string>
    <string name="register_for_talk">Register for Talk</string>
    <string name="modify_interests">Modify Interests</string>
    <string name="user_settings">User Settings</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_homepage">Homepage</string>
    <string name="thank_for_feedback">Thank you for the feedback!</string>
    <string name="txt_thank_for_speaker_volunteer">Thank you for volunteering %1$s</string>
    <string name="txt_ask_for_details">Enter details of the speaker you would like to volunteer below, and we will courteously contact them!</string>
    <string name="no_description_set">No content description set yet</string>
    <string name="email">email</string>
    <string name="first_name">first name</string>
    <string name="other_names">other names</string>
    <string name="retype_password">retype password</string>
    <string name="sign_up">Sign up</string>
    <string name="unexpected_text">you should not be seeings this text</string>
    <string name="thank_for_attending">Thank you for attending! </string>
    <string name="ask_reset_password">Trouble logging in? Reset Password here</string>
    <string name="get_events">(get events)</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="past_events">Past Events</string>
    <string name="Settings">Settings</string>
    <string name="volunteer_a_speaker">Volunteer a speaker</string>
    <string name="thanks_for_volunteering">Thanks for volunteering!</string>
    <string name="name">Name</string>
    <string name="topic">Topic</string>
    <string name="email_address">Email</string>
    <string name="todo">TODO</string>
    <string name="volunteer_to_speak" />
    <string name="volunteerToSpeak">Volunteer to Speak</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="accounts">User Settings</string>


    <!--App -->
    <string name="bristech_banner_description">Hashtag Bristech banner</string>


    <!--Login tokens-->
    <string name="google_client_id">449703625011-d29g4h7nj6uncesjveu2gdvnibkqtc26.apps.googleusercontent.com</string>
    <string name="facebook_app_id">215502435852921</string>
    <string name="fb_login_protocol_scheme">fb215502435852921</string>

    <!--Login activity-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_create_account">Create account</string>
    <string name="btn_googleSignIn">Google Sign in</string>
    <string name="btn_facebookSignIn">Facebook Sign in</string>
    <string name="btn_emailSignIn">Sign in</string>
    <string name="divider_or">or</string>
    <string name="logout">logout</string>


    <string-array name="genders_array">
        <item>M</item>
        <item>F</item>
        <item>Other</item>
        <item>Don't wish to specify</item>
    </string-array>


    <!--Event details-->
    <string name="event_title">Event Title</string>
    <string name="event_topic">Event Topic</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_duration">Event Duration</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Notification-->
    <string name="notification_title">Bristech</string>
    <string name="notification_text">Thanks for coming!</string>


</resources>
