<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming_events"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/upcoming_events" />
        <item
            android:id="@+id/nav_past_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/past_events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_volunteer_a_speaker"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/volunteer_a_speaker" />
            <item
                android:id="@+id/nav_attend_event"
                android:icon="@drawable/ic_menu_send"
                android:title="(physically attend an event)" />
        </menu>
    </item>

</menu>
