<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bristech.bristech.activities.FeedbackActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/app_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/settings_linear_layout_top"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txt_thank_for_attending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/thank_for_attending"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_request_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/feedback_please"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/btn_raised"
            android:layout_gravity="center_horizontal"
            android:onClick="submitBtnPress"
            android:text="@string/btn_submit"
            android:backgroundTint="@color/mustard" />

        <TextView
            android:id="@+id/txt_thank_for_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_return_to_homepage"
            style="@style/btn_raised"
            android:layout_gravity="center_horizontal"
            android:onClick="returnToHomepageBtnPress"
            android:text="@string/btn_homepage"
            android:backgroundTint="@color/mustard" />
    </LinearLayout>

    <TextView
        android:id="@+id/Feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/feedback"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
