<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:background="@color/transparent"
            android:layout_height="@dimen/event_toolbar_height"
            android:layout_width="match_parent"
            app:layout_collapseMode="parallax"/>

        <Space
            android:id="@+id/space_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,100:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_0" />

        <Space
            android:id="@+id/space_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,25:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_bristechBanner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/bristech_banner_description"
            android:src="@drawable/bristech_banner"
            android:tint="@color/black"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_1" />

        <EditText
            android:id="@+id/et_username"
            style="@style/et_loginActivity_loginInformationField"
            android:hint="@string/hint_username"
            android:textCursorDrawable="@drawable/cursor_color"
            android:inputType="textPersonName"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_bristechBanner" />

        <EditText
            android:id="@+id/et_password"
            style="@style/et_loginActivity_loginInformationField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintDimensionRatio="h,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_username" />

        <Space
            android:id="@+id/space_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,10:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>

        <Button
            android:id="@+id/bt_sign_in"
            style="@style/btn_loginActivity_signInWithProvider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_emailSignIn"
            android:textSize="@dimen/tv_sign_in_text_size"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintDimensionRatio="h,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_2" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_createAcc_margin_top"
            android:text="@string/tv_create_account"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Space
            android:id="@+id/space_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,30:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_in"/>

        <TextView
            android:id="@+id/divider_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/divider_or"
            android:textSize="@dimen/tv_or_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_3" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/btn_login_margin_side"
            android:layout_marginStart="@dimen/btn_login_margin_side"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintDimensionRatio="h,500:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_or" />

        <Button
            android:id="@+id/btn_google_sign_in"
            style="@style/btn_loginActivity_signInWithProvider"
            android:backgroundTint="@color/google_sign_in"
            android:text="@string/btn_googleSignIn"
            android:layout_marginTop="@dimen/btn_signIn_margin_top"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/tv_sign_in_text_size"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Space
            android:id="@+id/space_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,50:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_google_sign_in"/>

        <Button
            android:id="@+id/btn_facebook_sign_in"
            style="@style/btn_loginActivity_signInWithProvider"
            android:backgroundTint="@color/facebook_sing_in"
            android:text="@string/btn_facebookSignIn"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/tv_sign_in_text_size"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,7:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_4" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>

